# point-cloud-denoising

./: .gitignore  .gitmodules  README.md
code/3dviewer/: CMakeLists.txt  copier.h  main.cpp  pointcloud.h  polyhedron.h  polyhedron.qrc  polyhedron.ui  scene.cpp  scene.h  types.h  viewer.h  window.cpp  window.h
code/3dviewer/data/: al.off  bipyramid.off  circle_100.xyz  circle_16.xyz  circle_50.xyz  cube.off  cube2.xyz  ellipsoid.xyz  ellipsoid0-13.off  ellipsoid1-50.off  fandisk_simplified.xyz  fandisk_simplified2.xyz  sphere.off  sphere_100.off  sphere_1k_noisy.xyz  sphere_200.xyz  sphere_50.off  test.xyz
code/3dviewer/src/: AD.hpp  GradientUtils.hpp  add_noise.h  halfspace_intersection_with_constructions_3.h  halfspace_intersection_with_dual_3.h  inclusion_exclusion.hpp  minkowski_sum_pointcloud_convex_polyhedron_3.h  minkowski_sum_pointcloud_convex_polyhedron_utils_3.h  misc.h  pointcloud.h  polyhedron.h  polyhedron_face_tag.h  random_sphere_3.h  scene.cpp  scene.h  tag.h  types.h  vectorfield.h  viewer.cpp  volume_minkowski_convex_polyhedron_3.h  volume_minkowski_convex_polyhedron_utils_3.h  window.cpp  window.h
code/gradient_descent/: CMakeLists.txt  test.cpp
code/gradient_descent/inc/: AD.hpp  CGAL_AD.hpp  DescentSolver.hpp  DescentSolverAD.hpp  GradientDescentSolver.hpp  GradientDescentSolverAD.hpp  GradientUtils.hpp  NewtonSolver.hpp  Utils.hpp  perimeter_union_balls_2_ad.hpp  volume_union_balls_2.hpp  volume_union_balls_2_ad.hpp
code/gradient_descent/src/: DescentSolver.cpp  GradientDescentSolver.cpp  NewtonSolver.cpp  main.cpp
code/python/: AD.hpp  CMakeLists.txt  union_balls_2.hpp  union_balls_2_utils.hpp  unionballs.cpp
code/python/examples/: curvature.py  descent.py  ellipse.py  genpoints.py  plot.py
code/python/examples/data/: bird.xy  cartman.xy  kenny.xy  shark.xy
code/union_balls/: CMakeLists.txt  main.cpp  ps.h  volume_union_balls_2.h  volume_union_balls_2_debug.h
code/viewer/: CMakeLists.txt  CMakeLists.txt.Qt5
code/viewer/src/: AD.hpp  CGAL_AD_typedefs.hpp  CGAL_typedefs.hpp  Consts.hpp  DescentSolverAD.hpp  GradientDescentSolverAD.hpp  GradientUtils.hpp  Graphics.hpp  MainWindow.cpp  MainWindow.hpp  PointCloudUtils.hpp  QDelaunayTriangulationItem.hpp  QPointListItem.hpp  QSegmentListItem.hpp  QTriangulationItem.hpp  QVectorFieldItem.hpp  Scene.cpp  Scene.hpp  View.cpp  View.hpp  main.cpp  misc.hpp  perimeter_union_balls_2_ad.hpp  ps.hpp  random_ellipse_2.hpp  random_square_2.hpp  union_balls_2.hpp  union_balls_2_utils.hpp  volume_union_balls_2_ad.hpp  volume_union_balls_2_debug.h
data/pwsrec-data/: c-shape00.xy  c-shape01.xy  circle00.xy  circle01.xy  circle02.xy  circle03.xy  flower00.xy  kyle.xy  nested_circles00.xy  nested_circles01.xy  stan.xy  test.xy  test0.xy  test1.xy  test2.xy
data/pwsrec-data/MTSM10/: LICENSE.txt
data/pwsrec-data/MTSM10/.svn/: all-wcprops  entries
data/pwsrec-data/MTSM10/DATA_2D/.svn/: all-wcprops  entries
data/pwsrec-data/MTSM10/DATA_2D/.svn/text-base/: README.txt.svn-base
data/pwsrec-data/MTSM10/DATA_2D/Figure_3/.svn/: all-wcprops  entries
data/pwsrec-data/MTSM10/DATA_2D/Figure_4/.svn/: all-wcprops  entries
data/pwsrec-data/MTSM10/DATA_2D/Figure_4/Face/: Face_guardzone.txt
data/pwsrec-data/MTSM10/DATA_2D/Figure_5/: Monkey.txt
data/pwsrec-data/MTSM10/DATA_2D/Figure_5/.svn/: entries  (+1 more)
data/pwsrec-data/abstr09-shapes/.svn/: all-wcprops  entries
data/pwsrec-data/abstr09-shapes/.svn/text-base/: README.txt.svn-base
data/pwsrec-data/abstr09-shapes/fig1.australia/.svn/: all-wcprops  entries
data/pwsrec-data/abstr09-shapes/fig15.nonmaps/.svn/: all-wcprops  entries
data/pwsrec-data/abstr09-shapes/fig16.ukir/.svn/: all-wcprops  entries
data/pwsrec-data/abstr09-shapes/fig18.maps-misc/.svn/: all-wcprops  entries
pres/agpig/: pres.tex
pres/defense/img/: 3d_perimeter_squares.eps  curve-2d.eps  voronoi-offset-2d.eps
pres/defense/ipe/: voronoi-curve-2d.ipe
pres/soutenance/: pres.tex
pres/soutenance/img/: 3d_perimeter_squares.eps  3d_perimeter_squares_truth.eps  curve-2d-offset.eps  voronoi-diagram-2d.eps  voronoi-offset-2d.eps
pres/soutenance/ipe/: voronoi-curve-2d-no-noise.ipe
report/: 00-abstract.tex  01-intro.tex  02-state-of-the-art.tex  03-2d-case.tex  04-3d-case.tex  05-conclusion.tex  A-AD.tex  A-curvature-flow.tex  A-intro.tex  B-2d.tex  C-3d.tex  D-conclusion.tex  D-theory.tex  E-conclusion.tex  abstract.tex  appendix-A-AD.tex  appendix-B-code-intersection.tex  appendix-C-voronoi-polyhedral-norm.tex  bibfile.bib  report.tex
report-v2/: A-AD.tex  A-curvature-flow.tex  B-2d.tex  C-3d.tex  D-conclusion.tex  bibfile.bib  report.tex
report/code/: halfspace_intersection_with_dual_3.h  sqrt_AD.h
report/img/: inter_voronoi_ball_2d.eps  inter_voronoi_ball_2d_no_inter.eps  offset-parametrization.eps  reach-union-2-spheres.eps  voronoi-curve-2d.eps  voronoi-cylinder.eps
report/img/2d/: 2d_proof_gradient_area.eps  2d_proof_gradient_area_1.eps  inter_voronoi_ball_2d.eps  inter_voronoi_ball_2d_2_inter.eps  inter_voronoi_ball_2d_no_inter.eps
report/img/3d/: inclusion-exclusion-counter-l2.eps  inclusion-exclusion-counter-linfty.eps  voronoi-cube-aligned.eps  voronoi-cube-non-aligned.eps
report/ipe/: 2d_proof_gradient_area.ipe  2d_proof_gradient_area_1.ipe  3d_perimeter_squares.ipe  inclusion-exclusion.ipe  inter_voronoi_ball_2d.ipe  inter_voronoi_ball_2d_2_inter.ipe  inter_voronoi_ball_2d_no_inter.ipe  offset-parametrization.ipe  reach-union-2-spheres.ipe  voronoi-cube-aligned.ipe  voronoi-cube-non-aligned.ipe  voronoi-curve-2d.ipe  voronoi-cylinder.ipe  voronoi-diagram-2d.eps  voronoi-diagram-2d.ipe
report/res/2d/: area-dense.txt  area-sparse.txt  ellipse-area-100.xy  ellipse-area-outliers-40.xy  ellipse-noise-5-75-area.xy  ellipse-noise-5-75-perimeter.xy  ellipse-noise-5.xy  ellipse-noisy-dense.xy  ellipse-noisy-sparse.xy  ellipse-osc2.xy  ellipse-outliers.xy  ellipse-perimeter-outliers-100.xy  ellipse100-perimeter.xy  line.xy  line_fixed.xy  parameters-noisy.txt  perimeter-dense.txt  perimeter-sparse.txt  square-noisy-3.xy  square.xy
report/res/scripts/: graph.py  plot.py
(+128 files in other folders)
